# Leadplus-learning

./: CONTEXT.md  ISSUES.md  LIMARK-LEGACY-GAPS-REPORT.md  MIGRATION-GAPS-REPORT.md  README.md  VERIFICATION-AUDIT-2026-07-16.md
leadplus-intel/: .env.example  .gitignore  ARCHITECTURE.md  CHANGES-v2.md  README.md  SEARCH-EXPLAINED.md  docker-compose.yml  pyproject.toml
leadplus-intel/evals/: golden.yaml
leadplus-intel/prompts/: company_normalizer.md  job_normalizer.md  query_parser.md
leadplus-intel/scripts/: _bootstrap.py  acceptance.py  backfill_company_signal.py  bootstrap_canonical.py  bootstrap_industries.py  bootstrap_locations.py  bootstrap_tech.py  eval.py  ingest.py  ingest_contacts.py  init_db.py  profile_data.py
leadplus-intel/sql/: schema.sql
leadplus-intel/src/intel/: __init__.py  canonicalize.py  config.py  contacts.py  embed.py  llm.py  main.py  models.py  normalize.py  parse.py  repository.py  retrieve.py  score.py
leadplus-intel/src/intel/templates/: _error.html  _results.html  index.html
search-demo/: .env.example  config.js  package-lock.json  package.json  schema.sql  seed.js  setup.js  verify.js
search-demo/seed/: catalog.js  db.js  enums.js  format.js  rng.js
search-demo/seed/tables/: admin.js  campaign.js  leads.js  portal.js  workspace.js
