[project]
name = "leadplus-intel"
version = "0.1.0"
description = "LeadPlus Intent Search — rank companies by hiring-signal + technographic evidence"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "psycopg[binary,pool]>=3.2",
    "openai>=1.54",
    "python-dotenv>=1.0",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",   # form parsing for the UI's chip editor (§13 phase 8)
    "pyyaml>=6.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
trace = ["langsmith>=0.1"]

[tool.uv]
package = false
